Design Fixes : * Scrollbar for mobile in search page * Search page ipad modal loading * search in landing should be up by 30px * search icon to be centered * search results to be aligned with search * also question page should be aligned with search * search question scroll bellow question header * search answer modal height more than question * Footer & Header aligned

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -174,6 +174,12 @@ input[type="search"]:focus::-webkit-search-cancel-button {
     height: 10px;
 }
 
+@media screen and (max-width: 600px) {
+    .search-page-scroll::-webkit-scrollbar {
+        width: 4px;
+    }
+}
+
 .search-page-scroll::-webkit-scrollbar-thumb {
     background: #cdd1d6;
 }
@@ -196,4 +202,10 @@ input[type="search"]:focus::-webkit-search-cancel-button {
 .answer-scrollable::-webkit-scrollbar-track {
     background: #f5f6f7;
     border-radius: 5px;
+}
+
+.aligned-with-search {
+    @media screen(xl) {
+        padding-left: 15.5rem;
+    }
 }
